--- a/style.css
+++ b/style.css
@@ -6,43 +6,42 @@
 .card{
     box-shadow: 5px 5px  5px  4px lightgray;
 }
-.bb{
+.space{
+    margin-top: 100px;
+
+}
+.center{
     text-align: center;
 }
-.top { 
+.middle .top{
+    background-color: white ;
+    box-shadow: 10px 10px 20px lightgrey;
+    border-color: lightgrey;
+    background-size: 15px 10px;
+    border-radius: 5px;
+}
+    
+.middle .bottom{
+
+    background-color: white ;
+    box-shadow: 5px 5px  30px lightgrey;
+    border-color: lightgrey;
+    border-radius: 5px;
+    
+}
+ .first{
+    margin-left: 20px;
+    margin-right: 10px;
     margin-top: 50px;
     background-color: white;
-    box-shadow: 5px 5px 5px 10px lightgray;
-    width:50%;
-    length:50%;
+    box-shadow: 10px 10px  30px lightgray;
+    height: 50%;
+    width: 93%;
+    background-size: 15px 15px;
     border-radius: 5px;
-    }
-img.bottom { vertical-align: text-bottom;
-  
-  
-   margin-right: 200px;
-   margin-top: 25px;
-}
-.bottom{
-    box-shadow: 5px 5px 5px 10px lightgray;
-    width: 50%;
-    length:50%;
-    border-radius: 5px;
-}
-
-.first{
-
-    margin-left: 177px;
-    margin-top: 50px;
-    background-color: white;
-    box-shadow: 5px 5px 5px 10px lightgray;
-    border-radius: 5px;
-    width: 45%;
-    length:50%;
-}
-.bag{
-    text-align: center;
-}
+ }
+    
+    
 .space{
 
     margin-top: 100px;
